link personaggio uno

--- a/index.html
+++ b/index.html
@@ -19,7 +19,14 @@
         </p>
         <h3>Personaggi:</h3>
         <ul>
-          <li>personaggio uno</li>
+          <li>
+            <a
+              href="https://it.wikipedia.org/wiki/Tenet"
+              rel="nofollow"
+              target="_blank"
+              >personaggio uno</a
+            >
+          </li>
           <li>personaggio due</li>
           <li>personaggio tre</li>
         </ul>
